--- a/css/components/_buttons.css
+++ b/css/components/_buttons.css
@@ -25,12 +25,18 @@
         background: #fff;
     }
 
+    &.--dark {
+        font-size: 16px;
+        font-weight: 500;
+
+        /* border: 1px solid #fff; */
+        box-shadow: inset 0 0 0 1px #fff;
+    }
+
     &.--line {
-        border: 1px solid white;
+        box-shadow: inset 0 0 0 1px #fff;
         background: transparent;
         text-align: center;
-
-        --buton-min-width: 350px;
     }
 
     &.--second {
