--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @import url(./components/_footer.css);
 @import url(./components/_root.css);
 @import url(./components/_buttons.css);
+@import url(./components/_typeheads.css);
+
 
 * {
     margin: 0;
@@ -20,6 +22,16 @@ a {
     color: black;
 }
 
+p {
+    max-width: var(--p-max-width, auto);
+    padding: var(--p-padding, 0);
+}
+
+html {
+    font-size: 16px;
+    line-height: 1.4;
+}
+
 body {
     min-width: 100vw;
     min-height: 100vh;
@@ -30,9 +42,10 @@ body {
 }
 
 .container {
+    width: 100%;
     max-width: 1380px;
-    margin: 0 auto;
 
+    margin: 0 auto;
     padding-left: 24px;
     padding-right: 24px;
 
@@ -48,7 +61,11 @@ body {
     &.--flex {
         display: flex;
         flex-direction: column;
-        width: 100%;
+        gap: 24px;
+    }
+
+    &.--flex-row {
+        flex-flow: row wrap;
     }
 }
 
