--- a/css/components/_footer.css
+++ b/css/components/_footer.css
@@ -6,51 +6,85 @@
     width: 100%;
     min-height: 569px;
 
+    margin: 24px 0 0 0;
     padding: 24px 0 0 0;
 
     background-color: var(--color-dark);
     color: var(--color-light);
 }
 
-.group__title {
+.footer__top {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 24px;
+
+    margin-bottom: 72px;
+
+    @media (max-width: 980px) {
+        max-width: 500px;
+    }
+
+    @media (max-width: 420px) {
+       flex-direction: column;
+    }
+}
+
+.footer__col {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    
+    &.--first {
+        margin-right: 24px;
+    }
+    &.--last {
+        margin-left: auto;
+        text-align: right;
+        min-width: 230px;
+
+        @media (max-width: 1158px) {
+            text-align: left;
+            margin: 16px 0 0 0;
+        }
+    }
+    &.--center {
+        max-width: 180px;
+    }
+
+
+    @media (max-width: 720px) {
+        gap: 16px;
+    }
+}
+
+.footer__group {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    & hr {
+        margin: 16px 0;
+        height: 1px;
+        border: none;
+        background-color: #616161;
+
+        :first-of-type {
+            margin-top: 48px;
+        }
+    }
+}
+
+.footer__group-title {
+    margin-bottom: 6px;
+
     font-weight: 700;
     font-size: 16px;
     line-height: 25px;
     text-transform: uppercase;
-}
 
-.footer__top {
-    display: flex;
-    gap: 50px;
-    margin-bottom: 72px;
-}
-
-.footer__top-first {
-    width: 200px;
-}
-
-.footer__top-nav {
-    display: flex;
-    flex-direction: column;
-
-    gap: 10px;
-}
-
-.footer__top-nav p {
-    max-width: 198px;
-    max-height: 25px;
-
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 25px;
-}
-
-.footer__top-links {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-
-    list-style: none;
+    @media (max-width: 1024px) {
+        font-size: clamp(0.75rem, 0.446vw + 0.464rem, 1rem);
+    }
 }
 
 .footer__top-link {
@@ -72,68 +106,10 @@
 
         border: 1px solid white;
     }
-}
 
-.footer__second {
-    display: flex;
-    flex-direction: row;
-
-    gap: 40px;
-    max-width: 600px;
-    height: 389px;
-}
-
-.footer__group {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    gap: 27px;
-}
-
-.footer__group-item {
-    display: inline-flex;
-    flex-direction: column;
-    gap: 10px;
-
-    width: 179px;
-    height: 59px;
-}
-
-.footer__group-item.--2 {
-    margin-top: 50px;
-}
-
-.footer__group-item.--3 {
-    margin-top: 95px;
-}
-
-.footer__group-item a {
-    font-weight: 400;
-    size: 14.4px;
-    line-height: 25px;
-    color: rgba(255, 255, 255, 1);
-}
-
-.footer__top-group-last {
-    display: flex;
-    flex-direction: column;
-    margin-left: auto;
-    text-align: end;
-}
-
-.footer__group-item.--first {
-    width: 232px;
-}
-
-.footer__group-item.--last {
-    width: 232px;
-    height: 172px;
-
-    padding: 30px 0;
-    gap: 5px;
-
-    border-top: 2px solid #616161;
-    border-bottom: 2px solid #616161;
+    @media (max-width: 480px) {
+        font-size: 11.4px;
+    }
 }
 
 .footer__bottom {
@@ -142,29 +118,31 @@
     gap: 16px;
 }
 
-/* .footer__bottom-links {
+.footer__bottom-links {
     display: flex;
-} */
+    gap: 16px;
 
-.footer__bottom-nav {
-    display: flex;
-    gap: 17px;
+    & a {
+        color: var(--color-light);
+        font-weight: 600;
+        line-height: 19px;
 
-    list-style: none;
-}
+        text-transform: uppercase;
+    }
 
-.footer__bottom-item {
-    border-right: 1px solid var(--color-light);
-}
+    & a:not(:last-child) {
+        padding-right: 16px;
+        border-right: 1px solid currentColor;
 
-.footer__bottom-item a {
-    color: var(--color-light);
+        @media (max-width: 1024px) {
+            padding-right: 12px;
+        }
+    }
 
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 19px;
-
-    margin-right: 17px;
+    @media (max-width: 1024px) {
+        gap: 12px;
+        font-size: clamp(0.25rem, 1.656vw - 0.185rem, 0.875rem);
+    }
 }
 
 .footer__bottom-capt p {
@@ -173,4 +151,8 @@
     font-size: 14.4px;
     font-weight: 400;
     line-height: 22.5px;
+
+    @media (max-width: 640px) {
+        font-size: clamp(0.25rem, 3.333vw - 0.458rem, 0.875rem);
+    }
 }
