--- a/css/components/_buttons.css
+++ b/css/components/_buttons.css
@@ -47,4 +47,8 @@
         scale: 1.1;
         transition: scale 0.3s ease-in-out;
     }
+
+    @media (max-width: 700px) {
+        font-size: clamp(0.625rem, 2.174vw + 0.109rem, 1.5rem);
+    }
 }
