--- a/css/components/_home-support.css
+++ b/css/components/_home-support.css
@@ -32,6 +32,14 @@
         font-weight: 600;
         font-size: 16px;
         text-transform: none;
+
+        @media (max-width: 700px) {
+            font-size: 12px;
+        }
+    }
+
+    @media (max-width: 768px) {
+        margin: auto;
     }
 }
 
