--- a/css/components/_home-support.css
+++ b/css/components/_home-support.css
@@ -17,15 +17,14 @@
     align-items: center;
     flex-direction: column;
 
-    text-align: center;
-
     margin: auto 0 auto auto;
-    width: max-content;
-
-
-    border: 2px solid black;
     padding: 60px 40px;
 
+    max-width: 648px;
+    
+    text-align: center;
+
+    border: 2px solid black;
     background-color: rgba(255, 255, 255, .7);
 
     & p {
@@ -38,19 +37,26 @@
         }
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 998px) {
         margin: auto;
+        padding: 40px 32px;
+    }
+
+    @media (max-width: 420px) {
+        --button-spacer-x: 12px;
     }
 }
 
 .home-support__links {
     display: grid;
 
-    grid-template-columns: 1fr 1fr;
-    /* repeat(2, 1fr) */
     gap: 10px;
 
     margin: 20px 0;
+
+    @media (min-width: 365px) {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 .home-support__bottom {
