--- a/css/components/_typeheads.css
+++ b/css/components/_typeheads.css
@@ -2,13 +2,8 @@
     max-width: var(--captiom-max-width, auto);
     margin: var(--caption-margin, 0);
 
-    font-size: 32px;
+    font-size: clamp(24px, 4.938vw - 1.16rem, 32px);
     line-height: 1.2;
     font-weight: 700;
     text-transform: uppercase;
-
-    @media (max-width: 700px) {
-        font-size: clamp(1rem, 4.938vw - 1.16rem, 2rem);
-        
-    }
 }
