--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,100 @@
-/* главные  */
-@import url(./core/keyframes.css);
-@import url(./core/fonts.css);
-@import url(./core/base.css);
-@import url(./core/root.css);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-/* компоненты */
-@import url(./component/aside.css);
-@import url(./component/header.css);
-@import url(./component/main.css);
-@import url(./component/table.css);
-@import url(./component/switcher.css);
-@import url(./component/company.css);
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    height: 100vh;
+    background-color: #eeeeee;
+}
+
+.conteiner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 100%;
+}
+
+.favourites {
+    padding: 30px 20px;
+
+    min-width: 440px;
+    min-height: 160px;
+
+    border-radius: 30px;
+    box-shadow: 0px 0px 10px -3px rgba(66, 68, 90, 1);
+    background-color: rgb(255, 255, 255);
+
+    font-family: "Poppins", sans-serif;
+}
+
+.favourites__text {
+    font-size: 20px;
+    font-weight: 600;
+
+    padding: 0 0 24px 0;
+}
+
+.favourites__food {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 7px;
+
+    width: 500px;
+}
+
+.favourites__checkbox {
+    position: relative;
+    display: inline-flex;
+
+    padding: 5px 10px;
+
+    color: black;
+
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: rgb(236, 237, 243);
+
+    transition: 0.2s ease-in-out;
+    transition-property: background-color, color;
+}
+
+.favourites__input {
+    position: absolute;
+    inset: 0;
+    z-index: 1;
+
+    opacity: 0;
+
+    cursor: pointer;
+}
+
+.favourites__label {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.favourites__checkbox:has(.favourites__input:checked) {
+
+    color: white;
+    background-color: black;
+
+    --opacity-svg: 1;
+}
+
+    /* position: relative;
+    display: flex;
+    align-items: center;
+
+    width: 16px;
+    height: 16px;
+
+    fill: white;
+
+    opacity: var(--opacity-svg, 0);
+    transition: opacity 0.2s ease-in-out;  */
