--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,14 @@ body {
     flex-wrap: wrap;
     gap: 7px;
 
-    width: 500px;
+    width: 450px;
 }
 
 .favourites__checkbox {
     position: relative;
     display: inline-flex;
+
+    width: max-content;
 
     padding: 5px 10px;
 
@@ -73,34 +75,37 @@ body {
     cursor: pointer;
 }
 
-.favourites__label::after {
-    position: absolute;
+.favourites__label {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
 
+    svg {
+    display: var(--display-tick, none);
     width: 16px;
     height: 16px;
 
     fill: white;
 
-    opacity: var(--opacity-svg, 0);
-    transition: opacity 0.2s ease-in-out;
+    animation: anim-tick 0.3s ease-in-out;
+    }
 }
 
 .favourites__checkbox:has(.favourites__input:checked) {
-
     color: white;
     background-color: black;
 
-    --opacity-svg: 1;
+    --display-tick: inline-flex;
 }
 
-    /* position: relative;
-    display: flex;
-    align-items: center;
-
-    width: 16px;
-    height: 16px;
-
-    fill: white;
-
-    opacity: var(--opacity-svg, 0);
-    transition: opacity 0.2s ease-in-out;  */
+@keyframes anim-tick {
+    0% {
+        opacity: 0;
+        transform: translate(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
