--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* components  */
+@import url(./component/_checkbox.css);
+@import url(./component/_favourites.css);
+
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +11,7 @@
 
 body {
     height: 100vh;
-    background-color: #eeeeee;
+    background-color: #fafafa;
 }
 
 .conteiner {
@@ -16,96 +20,4 @@ body {
     align-items: center;
 
     height: 100%;
-}
-
-.favourites {
-    padding: 30px 20px;
-
-    min-width: 440px;
-    min-height: 160px;
-
-    border-radius: 30px;
-    box-shadow: 0px 0px 10px -3px rgba(66, 68, 90, 1);
-    background-color: rgb(255, 255, 255);
-
-    font-family: "Poppins", sans-serif;
-}
-
-.favourites__text {
-    font-size: 20px;
-    font-weight: 600;
-
-    padding: 0 0 24px 0;
-}
-
-.favourites__form {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 7px;
-
-    width: 450px;
-}
-
-.checkbox {
-    position: relative;
-    display: inline-flex;
-
-    width: max-content;
-
-    padding: 5px 10px;
-
-    color: black;
-
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    background-color: rgb(236, 237, 243);
-
-    transition: 0.2s ease-in-out;
-    transition-property: background-color, color;
-}
-
-.checkbox__input {
-    position: absolute;
-    inset: 0;
-    z-index: 1;
-
-    opacity: 0;
-
-    cursor: pointer;
-}
-
-.checkbox__label {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    gap: 6px;
-
-    svg {
-    display: var(--display-tick, none);
-    width: 16px;
-    height: 16px;
-
-    fill: white;
-
-    animation: anim-tick 0.2s ease-in-out;
-    }
-}
-
-.checkbox:has(.checkbox__input:checked) {
-    color: white;
-    background-color: black;
-
-    --display-tick: inline-flex;
-}
-
-@keyframes anim-tick {
-    from {
-        opacity: 0;
-        transform: translate(-10px);
-    }
-    to {
-        opacity: 1;
-        transform: translate(0);
-    }
 }
