--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 /* components  */
-@import url(./component/_checkbox.css);
-@import url(./component/_favourites.css);
+@import url(./component/_new-version.css);
+@import url(./component/_button.css);
 
 * {
     margin: 0;
     padding: 0;
 }
 
-body {
-    height: 100vh;
-    background-color: #fafafa;
+button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
 }
 
-.conteiner {
+body {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: linear-gradient(180deg, #FAFBFF 0%, #EFF1F9 101.29%);
+}
 
-    height: 100%;
+.container {
+    position: relative;
+    max-width: 1100px;
 }
