Task compelete all

--- a/css/style1.css
+++ b/css/style1.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 /* components  */
-@import url(./component/_adobe.css);
+@import url(./component/_psychology.css);
 
 * {
     margin: 0;
