--- a/css/component/_adobe.css
+++ b/css/component/_adobe.css
@@ -2,233 +2,150 @@
     display: flex;
     flex-direction: column;
     font-family: "Rubik", sans-serif;
+
+    padding: 48px 0;
 }
 
 .adobe__top {
     padding: 60px 0 30px 0;
     color: white;
-    font-size: 64px;
+    font-size: clamp(2rem, 2.222vw + 1.333rem, 4rem);
     font-weight: 700;
     text-align: center;
 }
 
 .adobe__cards {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(19, 1fr);
+    gap: 10px;
 
-    grid-column-gap: 10px;
+    max-width: 660px;
 
 
-    @media (max-width: 998px) {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+    @media (max-width: 575px) {
+        grid-template-columns: repeat(2, 1fr);
+        /* grid-template-rows: repeat(4, 1fr); */
+    }
+
+    @media (max-width: 400px) {
+       display: flex;
+       flex-flow: column;
     }
 }
 
 .adobe__card {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    flex-flow: column;
+    grid-area: var(--adobe--card-area, 1 / 1 / 11);
 
-    grid-area: 1 / 2 / 3 / 3;
+    gap: 12px;
 
-    width: 150px;
-    height: max-content;
+    /* width: 150px; */
+    /* height: max-content; */
 
     padding: 15px 20px;
 
+    color: rgb(20, 190, 238);
     font-size: 12px;
 
-    border: 5px solid rgb(20, 190, 238);
+    border: 5px solid currentColor;
     background-color: rgba(0, 39, 48, 0.5);
-    color: white;
-    
 
-    & .adobe__title {
-        margin-bottom: 10px;
-
-        font-size: 24px;
-        font-weight: 700;
-
-        color: rgb(20, 190, 238);
+    & p {
+        color: white;
     }
 
-    & .adobe__capt {
-        display: flex;
-        flex-direction: column;
-        gap: 3px;
+    &.--ae {
+        grid-area: var(--adobe--card-area-ae, 1 / 2 / 7);
 
-        & span {
-            font-weight: 500;
-            margin-bottom: 5px;
-            color: rgb(61, 122, 139);
-        }
-
-        & span:last-of-type {
-            margin-top: 10px;
-        }
-    }
-}
-
-.adobe__card.--ae {
-    border: 5px solid rgb(203, 147, 237);
-    background-color: rgba(39, 28, 48, 0.5);
-
-    grid-area: 1 / 3 / 3 / 4;
-
-    & .adobe__title.--ae {
         color: rgb(203, 147, 237);
+        background-color: rgba(39, 28, 48, 0.5);
     }
 
-    .adobe__capt.--ae {
-        & span {
-            color: rgb(110, 84, 128);
-        }
-    }
-}
+    &.--id {
+        grid-area: var(--adobe--card-area-id, 1 / 3 / 9);
 
-.adobe__card.--id {
-    border: 5px solid rgb(224, 77, 139);
-    background-color: rgba(50, 14, 26, 0.5);
-
-    grid-area: 1 / 4 / 3 / 5;
-
-    & .adobe__title.--id {
-        color: rgb(235, 73, 141);
+        color: rgb(224, 77, 139);
+        background-color: rgba(50, 14, 26, 0.5);
     }
 
-    .adobe__capt.--id {
-        & span {
-            color: rgb(112, 37, 67);
-        }
-    }
+    &.--ai {
+        grid-area: var(--adobe--card-area-ai, 11 / 1 / 20);
 
-    @media (max-width: 998px) {
-        grid-area: 3 / 2 / 3 / 5;
-        transform: translate(0, 20%);
-    }
-}
-
-.adobe__card.--ai {
-    border: 5px solid rgb(232, 126, 34);
-    background-color: rgba(47, 24, 0, 0.5);
-
-    grid-area: 2 / 2 / 3 / 5;
-    transform: translate(0, 14%);
-
-    & .adobe__title.--ai {
         color: rgb(232, 126, 34);
+        background-color: rgba(47, 24, 0, 0.5);
+
     }
 
-    .adobe__capt.--ai {
-        & span {
-            color: rgb(137, 75, 37);
-        }
-    }
-}
+    &.--xd {
+        grid-area: var(--adobe--card-area-xd, 7 / 2 / 15);
 
-.adobe__card.--xd {
-    border: 5px solid rgb(229,72,162);
-    background-color: rgba(48,10,30, 0.5);
+        color: rgb(229, 72, 162);
+        background-color: rgba(48, 10, 30, 0.5);
 
-    grid-area: 2 / 3 / 3 / 4;
-    transform: translate(0,-43%);
-
-    & .adobe__title.--xd {
-        color: rgb(229,72,162);
     }
 
-    .adobe__capt.--xd {
-        & span {
-            color: rgb(125,46,86);
-        }
-    }
-}
+    &.--an {
+        grid-area: var(--adobe--card-area-an, 9 / 3 / 15);
 
-.adobe__card.--an {
-    padding: 0 20px 15px 20px;
-
-    border: 5px solid rgb(221,102,77);
-    background-color: rgba(48,16,18, 0.5);
-
-    grid-area: 2 / 4 / 3 / 5;
-
-    transform: translate(0,-20%);
-
-    & .adobe__title.--an {
-        color: rgb(221,102,77);
-
-        @media (min-width: 998px) {
-            transform: translate(0, 10%);
-        }
+        color: rgb(221, 102, 77);
+        background-color: rgba(48, 16, 18, 0.5);
     }
 
-    .adobe__capt.--an {
-        & span {
-            color: rgb(137,62,51);
-        }
+    &.--au {
+        grid-area: var(--adobe--card-area-au, 15 / 2 / 20);
+
+        color: rgb(77, 214, 190);
+        background-color: rgba(7, 48, 39, 0.5);
     }
 
-    @media (max-width: 998px) {
-        grid-area: 3 / 3 / 3 / 5;
-        transform: translate(0, 21%);
-        padding: 15px 30px 50px 10px;
+    &.--dw {
+        grid-area: var(--adobe--card-area-dw, 15 / 3 / 20);
+
+        color: rgb(71, 247, 15);
+        background-color: rgba(7, 50, 2, 0.5);
+    }
+
+    @media (max-width: 575px) {
+        /* --adobe--card-area: ;*/
+        /* --adobe--card-area-ae: ; */
+        --adobe--card-area-id: 20 / 1 / 29 / 3;
+        /* --adobe--card-area-ai: ; */
+        /* --adobe--card-area-xd: ; */
+        --adobe--card-area-an: 29 / 1 / 30 ;
+        /* --adobe--card-area-au: ; */
+        --adobe--card-area-dw: 29 / 2 / 30;
+    }
+    
+    @media (max-width: 400px) {
+        grid-area: auto !important;
     }
 }
 
-.adobe__card.--au {
-    border: 5px solid rgb(77,214,190);
-    background-color: rgba(7,48,39, 0.5);
-
-    grid-area: 2 / 3 / 4 / 4;
-    transform: translate(0,86%);
-
-    & .adobe__title.--au {
-        color: rgb(77,214,190);
-    }
-
-    .adobe__capt.--au {
-        flex-direction: row;
-        flex-wrap: wrap;
-
-        & span {
-            min-width: 100px;
-            color: rgb(44,117,107);
-        }
-
-        & .spacer {
-            margin-right: 10px;
-        }
-    }
+.adobe__title {
+    font-size: 24px;
+    font-weight: 700;
 }
 
-.adobe__card.--dw {
-    border: 5px solid rgb(71,247,15);
-    background-color: rgba(7,50,2, 0.5);
+.adobe__card-group {
+    display: flex;
+    flex-flow: column;
+    gap: 3px;
 
-    grid-area: 2 / 4 / 4 / 4;
-    transform: translate(0,86%);
-
-    & .adobe__title.--dw {
-        color: rgb(71,247,15);
+    & mark {
+        margin-bottom: 5px;
+        font-weight: 500;
+        opacity: 0.5;
     }
 
-    .adobe__capt.--dw {
-        flex-direction: row;
-        flex-wrap: wrap;
+    &.--row {
+        flex-flow: row wrap;
+        column-gap: 15px;
 
-        & span {
-            min-width: 100px;
-            color: rgb(58,123,88);
+        & mark {
+            width: 100%;
         }
-
-        & .spacer {
-            margin-right: 10px;
-        }
-    }
-
-    @media (max-width: 998px) {
-        grid-area: 4 / 2;
-        transform: translate(0, 10%);
     }
 }
