--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 /* components  */
-@import url(./component/_adobe.css);
+@import url(./component/_progress.css);
 
 * {
     margin: 0;
@@ -18,9 +18,10 @@ button {
 
 body {
     display: flex;
+    align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: black;
+    background-color: rgb(232,223,216);
 }
 
 .container {
@@ -32,4 +33,44 @@ body {
 mark {
     color: currentColor;
     background: unset;
+}
+
+.bg {
+    position: absolute;
+    z-index: -2;
+
+    width: 400px;
+    height: 400px;
+
+    transform: rotate(45deg);
+
+    background-color: rgb(244,218,138);
+}
+
+.bg::before {
+    position: absolute;
+    inset: auto auto 0 0;
+    z-index: -1;
+
+    width: 200px;
+    height: 200px;
+
+    transform: translate(-10%, 25%);
+
+    background-color: rgba(152,194,127, 0.8);
+    content: '';
+}
+
+.bg::after {
+    position: absolute;
+    inset: 0 0 auto auto;
+    z-index: -1;
+
+    width: 200px;
+    height: 200px;
+
+    transform: translate(10%, -25%);
+
+    background-color: rgba(236,156,178, 0.8);
+    content: '';
 }
