--- a/css/style.css
+++ b/css/style.css
@@ -6,75 +6,51 @@
     box-sizing: border-box;
 }
 
-button {
+/* button {
     padding: 0;
     border: none;
     font: inherit;
     color: inherit;
     background-color: transparent;
-}
+} */
 
 body {
     display: flex;
+    flex-flow: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
     background-color: rgb(85, 85, 85);
-}
-
-.container {
-    position: relative;
-    max-width: 1200px;
-    padding: 0 24px;
-}
-
-.main {
-    display: flex;
-    align-items: center;
-    flex-flow: column;
-    font-family: 'Rubik';
     color: white;
 }
 
-.main__username {
-    display: flex;
-    align-items: center;
-    flex-flow: column;
-    gap: 24px;
-    padding: 48px;
-    border: 1.5px solid rgb(255, 255, 255);
-    background-color: rgba(255, 255, 255, 0.15);
-    border-radius: 10px;
+.box {
+    display: none;
+    background-color: red;
+    height: 100px;
+    width: 100px;
+    transition: transform 1s;
 }
 
-.main__label {
-    font-weight: 600;
-    text-align: center;
-    & span {
-        color: rgb(250, 40, 40);
-        text-decoration: underline;
+.box.show {
+    display: block;
+    translate: 0;
+    
+    @starting-style {
+        translate: 20px;
     }
 }
 
-.main__input {
-    padding: 5px;
-    border-radius: 5px;
-    outline: none;
-    border: none;
+/* .title {
+    font-size: 1.5rem;
 }
 
-.button {
-    padding: 7px 30px;
-    border-radius: 10px;
-    color: rgb(0, 0, 0);
-    font-weight: 500;
-    background-color: rgb(255, 255, 255);
-
-    &:hover {
-        opacity: .9;
-    }
-
-    &:active {
-        scale: .98;
-    }
+.main {
+    height: 0;
+    transition: height 0.5s;
+    overflow: hidden;
 }
+
+.main.show {
+    height: 40px;
+} */
