--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ button {
     cursor: pointer;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
 body {
     display: flex;
     flex-flow: column;
@@ -25,13 +30,17 @@ body {
 }
 
 .container {
+    position: relative;
     min-width: 1440px;
+    padding: 0 48px;
+
+    @media (max-width: 1500px) {
+        min-width: 1200px;
+    }
 }
 
 .buy-component {
-    min-width: 100%;
-    height: 19rem;
-    padding: 0 24px;
+    padding: 24px;
 
     font-family: Arial, Helvetica, sans-serif;
 
@@ -39,7 +48,6 @@ body {
     background-color: rgba(33, 33, 33, .9);
 
     & .buy-component__top {
-        padding: 1.5rem 0 0 0;
         color: white;
         font-weight: 700;
     }
@@ -58,20 +66,26 @@ body {
 .buy-component__tab {
     padding-bottom: .75rem;
 
-    &.--1 {
+
+    &.--is-active {
         border-bottom: 2px solid white;
     }
 
-    &.--2 {
-
-        & span {
-            padding: 6px;
-            font-size: 0.625rem;
-            background-color: #00A85D;
-            border-radius: 10px;
-            color: black;
-        }
+    &[data-sticker]::after {
+        content: attr(data-sticker);
+        display: var(--tab-sticker-show, inline-flex);
+        padding: 6px 8px;
+        margin: auto auto auto 5px;
+        font-size: 0.625rem;
+        background-color: #00A85D;
+        border-radius: 10px;
+        color: black;
     }
+}
+
+.buy-component__tabs-content {
+    display: flex;
+    margin-bottom: 48px;
 }
 
 .select-term {
@@ -127,7 +141,7 @@ body {
     padding: 10px;
     min-height: 6.25rem;
 
-    border: 2px solid white;
+    border: 2px solid rgba(255, 255, 255, 0.7);
     border-radius: 2px;
     background-color: #000;
     cursor: pointer;
@@ -153,6 +167,10 @@ body {
             height: 1rem;
         }
     }
+
+    &.--is-select {
+        border: 2px solid white;
+    }
 }
 
 .select-term__card:hover {
@@ -167,14 +185,17 @@ body {
 }
 
 .select-term__top {
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 1.5;
 
-    margin-bottom: 1rem;
+    & .price-text-buy {
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 0;
+        line-height: 1.5;
 
-    & span {
+        margin-bottom: 1rem;
+    }
+
+    & .desk-text-buy {
         font-size: 1rem;
         opacity: .7;
     }
@@ -184,37 +205,32 @@ body {
     display: flex;
     align-items: center;
     color: #000;
+    width: 100%;
+    opacity: 1;
+    box-shadow: none;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    padding-bottom: 9px;
+    padding-top: 9px;
+    border: 1px solid white;
+    background-color: white;
+    user-select: none;
 
-    & .add-cart {
+    & h2 {
         display: flex;
-        align-items: center;
         width: 100%;
-        opacity: 1;
-        box-shadow: none;
-        padding-left: 1.25rem;
-        padding-right: 1.25rem;
-        padding-bottom: 9px;
-        padding-top: 9px;
-        border: 1px solid white;
-        background-color: white;
-        user-select: none;
-
-        & h2 {
-            display: flex;
-            width: 100%;
-            font-size: 1rem;
-            font-weight: 600;
-            line-height: 1.25;
-        }
-
-        & svg {
-            width: 1.5rem;
-        }
+        font-size: 1rem;
+        font-weight: 600;
+        line-height: 1.25;
     }
-}
 
-.add-cart:hover {
-    border: 1px solid rgb(139, 85, 152);
+    & svg {
+        width: 1.5rem;
+    }
+
+    &:hover {
+        border: 1px solid rgb(139, 85, 152);
+    }
 }
 
 .select-term__bottom {
@@ -232,5 +248,58 @@ body {
     & svg {
         width: .75rem;
         fill: white;
+    }
+}
+
+.buy-component__footer {
+    display: inline-flex;
+    min-width: 100%;
+    padding: 24px 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.buy-component__nav {
+    display: inline-flex;
+    align-items: center;
+    gap: 2rem;
+
+    /* &::before {
+        content: '';
+        height: 10px;
+        width: 2px;
+        background-color: white;
+    } */
+}
+
+.buy-component__link {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    gap: 7px;
+
+    color: #fff;
+    font-size: .875rem;
+    line-height: 1.5;
+
+    cursor: pointer;
+
+    & svg {
+        width: 1rem;
+        fill: white;
+    }
+
+    &:hover {
+        text-decoration: underline 2px rgb(139, 85, 152);
+    }
+
+    &:not(:first-of-type) {
+        &::before {
+            position: absolute;
+            transform: translateX(-16px);
+            content: '';
+            width: 1px;
+            height: 1rem;
+            background-color: rgba(255, 255, 255, 0.5);
+        }
     }
 }
